Exp-1/fcfs/error.txt
SJF.C:9:2: error: ‘::main’ must return ‘int’
    9 |  void main()
      |  ^~~~
